[project]
name = "knowledge-discovery-project"
version = "0.1.0"
description = "A Knowledge Discovery project focused on applying data mining and machine learning methods to time series data."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
]
